layout overflow-y main fixed

--- a/css/framework.css
+++ b/css/framework.css
@@ -11,10 +11,10 @@
 
 /* reset */
 
-.position-absolute {
+/* .position-absolute {
     border: dashed 1px rgb(0, 0, 0);
     background-color: rgba(0, 255, 0, 0.2);
-}
+} */
 
 
 
